--- a/core/config/default.yaml
+++ b/core/config/default.yaml
@@ -6,9 +6,10 @@ shot_num: 5
 query_num: 15
 
 # data info
-data_root: /data/dcq/DataSets/miniImageNet
+data_root: /data/wzy/miniImageNet--ravi
 image_size: 84
-augment: False
+augment: True
+augment_method: sample5
 train_episode: 10000
 test_episode: 1000
 
