Fix collate bugs -> return target by torch.Tensor type instead of np.int64.

--- a/core/config/default.yaml
+++ b/core/config/default.yaml
@@ -8,7 +8,7 @@ query_num: 15
 # data info
 data_root: /data/wzy/miniImageNet--ravi
 image_size: 84
-augment: True
+augment: False
 augment_method: sample5
 train_episode: 10000
 test_episode: 1000
