support for the pretrain dataset

--- a/core/config/default.yaml
+++ b/core/config/default.yaml
@@ -4,6 +4,7 @@ data_name: miniImageNet
 way_num: 5
 shot_num: 5
 query_num: 15
+batch_size: 128
 
 # data info
 data_root: /data/wzy/miniImageNet--ravi
