--- a/config/anil.yaml
+++ b/config/anil.yaml
@@ -1,9 +1,22 @@
+data_name: miniImageNet
+
+# base info
+way_num: 5
+shot_num: 5
+query_num: 15
+batch_size: 128
+episode_size: 4
+
+# data info
+data_root: /data/yxs/miniImageNet--ravi
+image_size: 84
+augment: True
+augment_times: 1
 train_episode: 1000
 test_episode: 200
 
-save_part:
-  - model_func
-  - classifier
+# train info
+epoch: 100
 
 # arch info
 backbone:
@@ -21,3 +34,34 @@ classifier:
     inner_train_iter: 10
     feat_dim: 1600
     hid_dim: 800
+
+optimizer:
+  name: Adam
+  kwargs:
+    lr: 0.001
+  other:
+
+# lr_scheduler info
+lr_scheduler:
+  name: StepLR
+  kwargs:
+    gamma: 0.5
+    step_size: 10
+
+# result info
+result_root: ./results
+save_interval: 10
+save_part:
+
+# log info
+log_level: info
+log_interval: 100
+
+# gpu info
+device_ids: 0, 1
+n_gpu: 2
+parallel_part:
+  - model_func
+  - classifier
+seed: 0
+deterministic: True
