--- a/config/dn4.yaml
+++ b/config/dn4.yaml
@@ -1,8 +1,15 @@
-train_episode: 1000
-test_episode: 200
+train_episode: 10000
+test_episode: 600
+episode_size: 16
 
 save_part:
   - model_func
+
+device_ids: 0,1,2,3
+n_gpu: 4
+parallel_part:
+  - model_func
+  - dn4_layer
 
 # arch info
 backbone:
