--- a/config/baseline.yaml
+++ b/config/baseline.yaml
@@ -1,15 +1,27 @@
-train_episode: 1000
-test_episode: 500
+data_name: miniImageNet
 
-save_part:
-  - model_func
-  - classifier
+# base info
+way_num: 5
+shot_num: 5
+query_num: 15
+batch_size: 16
+episode_size: 1
+
+# data info
+data_root: /data/yxs/miniImageNet--ravi
+image_size: 224
+augment: True
+augment_times: 1
+train_episode: 10000
+test_episode: 1000
+
+# train info
+epoch: 50
 
 # arch info
 backbone:
-  name: Conv64F
+  name: resnet18
   kwargs:
-    is_flatten: True
 
 classifier:
   name: Baseline
@@ -17,7 +29,42 @@ classifier:
     inner_optim:
       name: Adam
       kwargs:
-        lr: 1e-2
-    inner_train_iter: 20
-    feat_dim: 1600
+        lr: 1e-3
+    inner_train_iter: 100
+    inner_batch_size: 4
+    feat_dim: 512
     num_classes: 64
+
+# optimizer info
+optimizer:
+  name: Adam
+  kwargs:
+    lr: 0.001
+  other:
+    model_func: 0.001
+
+# lr_scheduler info
+lr_scheduler:
+  name: StepLR
+  kwargs:
+    gamma: 1.0
+    step_size: 10
+
+# result info
+result_root: ./results
+save_interval: 10
+save_part:
+  - model_func
+  - classifier
+
+# log info
+log_level: info
+log_interval: 100
+
+# gpu info
+device_ids: 3
+n_gpu: 1
+parallel_part:
+  - model_func
+seed: 0
+deterministic: True
