--- a/config/anil.yaml
+++ b/config/anil.yaml
@@ -52,6 +52,8 @@ lr_scheduler:
 result_root: ./results
 save_interval: 10
 save_part:
+  - model_func
+  - classifier
 
 # log info
 log_level: info
