--- a/config/relation_net.yaml
+++ b/config/relation_net.yaml
@@ -1,35 +1,59 @@
 data_name: miniImageNet
+#data_name: tieredImageNet
 
 # base info
 way_num: 5
-shot_num: 1
+shot_num: 5
 query_num: 15
 batch_size: 128
 episode_size: 1
 
 # data info
 data_root: /data/yxs/miniImageNet--ravi
+#data_root: /data/student/tiered_imagenet
 image_size: 84
+use_memory: False
 augment: True
 augment_times: 1
 train_episode: 10000
 test_episode: 1000
 
 # train info
-epoch: 50
+epoch: 60
+test_epoch: 5
+resume: False
 
 # arch info
+#backbone:
+#  name: Conv64FReLU
+#  kwargs:
+#    is_flatten: False
+
 backbone:
-  name: Conv64FLeakyReLU
+  name: resnet18
   kwargs:
-    is_flatten: False
+#    avg_pool: False
 
 classifier:
   name: RelationNet
   kwargs:
-    feat_dim: 64
+    feat_dim: 512
     feat_height: 3
     feat_width: 3
+
+# optimizer info
+optimizer:
+  name: SGD
+  kwargs:
+    lr: 0.01
+  other:
+
+# lr_scheduler info
+lr_scheduler:
+  name: CosineAnnealingLR
+  kwargs:
+    T_max: 100
+    eta_min: 0
 
 # result info
 result_root: ./results
@@ -43,10 +67,11 @@ log_level: info
 log_interval: 100
 
 # gpu info
-device_ids: 2
+device_ids: 4
 n_gpu: 1
 parallel_part:
   - model_func
   - relation_layer
 seed: 0
-deterministic: True
+deterministic: False
+
