--- a/config/leo.yaml
+++ b/config/leo.yaml
@@ -3,25 +3,26 @@ data_name: miniImageNet
 
 # base info
 way_num: 5
-shot_num: 1
+shot_num: 5
 query_num: 15
 batch_size: 128
 episode_size: 1
 
 # data info
-data_root: /data/yxs/miniImageNet--ravi
-#data_root: /data/student/tiered_imagenet
+data_root: /data/student/miniImageNet--ravi
+#data_root: /data/yxs/tiered_imagenet
 image_size: 84
 augment: True
 augment_times: 1
-train_episode: 1000
+train_episode: 10000
 test_episode: 1000
 
 # train info
-epoch: 60
+epoch: 50
 
 # arch info
-pretrain_path: /home/yxs/Codes/LibFewShot/results/Baseline-resnet12-5-5/checkpoints/model_func_best.pth
+pretrain_path: ./results/Baseline-miniImageNet-resnet12-5-1/checkpoints/model_func_best.pth
+#pretrain_path: ./results/Baseline-tieredImageNet-resnet18-5-1/checkpoints/model_func_best.pth
 
 #backbone:
 #  name: WRN
@@ -31,7 +32,7 @@ pretrain_path: /home/yxs/Codes/LibFewShot/results/Baseline-resnet12-5-5/checkpoi
 backbone:
   name: resnet12
   kwargs:
-    avg_pool: True
+#    avg_pool: True
 
 classifier:
   name: LEO
@@ -42,29 +43,34 @@ classifier:
     inner_train_iter: 5
     finetune_iter: 5
     feat_dim: 640
-    hid_dim: 320
+    hid_dim: 64
+    kl_weight: 1e-3
+    encoder_penalty_weight: 1e-9
+    orthogonality_penalty_weight: 1e-3
 
 # optimizer info
 optimizer:
-  name: Adam
+  name: SGD
   kwargs:
     lr: 0.001
+    momentum: 0.9
   other:
     model_func: 0.001
 
 # lr_scheduler info
 lr_scheduler:
-  name: StepLR
+  name: CosineAnnealingLR
   kwargs:
-    gamma: 0.5
-    step_size: 10
+    T_max: 50
+    eta_min: 0
 
 # result info
 result_root: ./results
 save_interval: 10
 save_part:
   - model_func
-  - classifier
+  - encoder
+  - decoder
 
 # log info
 log_level: info
@@ -76,4 +82,4 @@ n_gpu: 1
 parallel_part:
   - model_func
 seed: 0
-deterministic: True
+deterministic: False
