different trfms and aug_times in query and shot

--- a/core/config/default.yaml
+++ b/core/config/default.yaml
@@ -17,6 +17,7 @@ image_size: 84
 use_memory: False
 augment: True
 augment_times: 1
+augment_times_query: 1
 train_episode: 10000
 test_episode: 1000
 
