--- a/config/proto_net.yaml
+++ b/config/proto_net.yaml
@@ -1,19 +1,31 @@
 train_episode: 10000
 test_episode: 600
-episode_size: 32
+way_num: 5
+shot_num: 1
+query_num: 10
+batch_size: 1
+episode_size: 1
+
+
+image_size: 84
+augment: True
+augment_times: 1
+
+# train info
+epoch: 50
 
 save_part:
   - model_func
 
-device_ids: 0,1,2,3
-n_gpu: 4
+device_ids: 0,1
+n_gpu: 2
 parallel_part:
   - model_func
   - proto_layer
 
 # arch info
 backbone:
-  name: Conv64FLeakyReLU
+  name: Conv64F
   kwargs:
     is_flatten: True
 
