--- a/config/anil.yaml
+++ b/config/anil.yaml
@@ -49,7 +49,7 @@ lr_scheduler:
 result_root: ./results
 save_interval: 10
 save_part:
-  - model_func
+  - emb_func
   - classifier
 
 # log info
@@ -60,7 +60,7 @@ log_interval: 100
 device_ids: 2
 n_gpu: 1
 parallel_part:
-  - model_func
+  - emb_func
   - classifier
 seed: 0
 deterministic: True
