--- a/core/properties/r2d2_r2d2embedding_miniimagenet_5W_1S.yaml
+++ b/core/properties/r2d2_r2d2embedding_miniimagenet_5W_1S.yaml
@@ -59,7 +59,7 @@ log_interval: 100
 device_ids: 0
 n_gpu: 1
 parallel_part:
-  - model_func
+  - emb_func
   - classifier
 seed: 0
 deterministic: True
