--- a/config/atl_net.yaml
+++ b/config/atl_net.yaml
@@ -49,7 +49,7 @@ lr_scheduler:
 result_root: ./results
 save_interval: 10
 save_part:
-  - model_func
+  - emb_func
   - atl_layer
 
 # log info
@@ -60,7 +60,7 @@ log_interval: 100
 device_ids: 3
 n_gpu: 1
 parallel_part:
-  - model_func
+  - emb_func
   - atl_layer
 seed: 1
 deterministic: True
