--- a/config/baseline.yaml
+++ b/config/baseline.yaml
@@ -54,7 +54,7 @@ lr_scheduler:
 result_root: ./results
 save_interval: 10
 save_part:
-  - model_func
+  - emb_func
   - classifier
 
 # log info
@@ -65,6 +65,6 @@ log_interval: 100
 device_ids: 3
 n_gpu: 1
 parallel_part:
-  - model_func
+  - emb_func
 seed: 0
 deterministic: True
