--- a/config/leo.yaml
+++ b/config/leo.yaml
@@ -68,7 +68,7 @@ lr_scheduler:
 result_root: ./results
 save_interval: 10
 save_part:
-  - model_func
+  - emb_func
   - encoder
   - decoder
 
@@ -80,6 +80,6 @@ log_interval: 100
 device_ids: 1
 n_gpu: 1
 parallel_part:
-  - model_func
+  - emb_func
 seed: 0
 deterministic: False
