--- a/config/mtl_preatrain.yaml
+++ b/config/mtl_preatrain.yaml
@@ -54,7 +54,7 @@ lr_scheduler:
 result_root: ./results
 save_interval: 10
 save_part:
-  - model_func
+  - emb_func
 
 # log info
 log_level: info
@@ -64,6 +64,6 @@ log_interval: 100
 device_ids: 0
 n_gpu: 1
 parallel_part:
-  - model_func
+  - emb_func
 seed: 0
 deterministic: True
