--- a/config/relation_net.yaml
+++ b/config/relation_net.yaml
@@ -52,7 +52,7 @@ lr_scheduler:
 result_root: ./results
 save_interval: 10
 save_part:
-  - model_func
+  - emb_func
   - relation_layer
 
 # log info
@@ -63,7 +63,7 @@ log_interval: 100
 device_ids: 2
 n_gpu: 1
 parallel_part:
-  - model_func
+  - emb_func
   - relation_layer
 seed: 0
 deterministic: False
