--- a/core/config/default.yaml
+++ b/core/config/default.yaml
@@ -49,7 +49,7 @@ lr_scheduler:
 result_root: ./results
 save_interval: 10
 save_part:
-  - model_func
+  - emb_func
 pretrain_path: ~
 
 # log info
@@ -60,7 +60,7 @@ log_interval: 100
 device_ids: 1
 n_gpu: 1
 parallel_part:
-  - model_func
+  - emb_func
 seed: 0
 deterministic: True
 
