--- a/core/properties/Baseline++_Conv64F_miniimagenet_5W1S.yaml
+++ b/core/properties/Baseline++_Conv64F_miniimagenet_5W1S.yaml
@@ -55,7 +55,7 @@ classifier:
 result_root: ./results
 save_interval: 10
 save_part:
-  - model_func
+  - emb_func
   - classifier
 
 # log info
@@ -66,7 +66,7 @@ log_interval: 100
 device_ids: 1
 n_gpu: 1
 parallel_part:
-  - model_func
+  - emb_func
 seed: 0
 deterministic: True
 
