--- a/core/properties/ProtoNet_Conv64F_miniimagenet_5W5S.yaml
+++ b/core/properties/ProtoNet_Conv64F_miniimagenet_5W5S.yaml
@@ -4,12 +4,12 @@ test_episode: 600
 episode_size: 1
 
 save_part:
-  - model_func
+  - emb_func
 
 device_ids: 0,1,2,3
 n_gpu: 4
 parallel_part:
-  - model_func
+  - emb_func
   - proto_layer
 
 # arch info
