--- a/core/properties/maml_Conv32F_miniimagenet_5W_5S.yaml
+++ b/core/properties/maml_Conv32F_miniimagenet_5W_5S.yaml
@@ -51,7 +51,7 @@ lr_scheduler:
 result_root: ./results
 save_interval: 10
 save_part:
-  - model_func
+  - emb_func
 
 # log info
 log_level: info
@@ -61,6 +61,6 @@ log_interval: 100
 device_ids: 0
 n_gpu: 1
 parallel_part:
-  - model_func
+  - emb_func
 seed: 0
 deterministic: True
