--- a/core/properties/versa_Conv64Five_miniimagenet_5W_1S.yaml
+++ b/core/properties/versa_Conv64Five_miniimagenet_5W_1S.yaml
@@ -54,7 +54,7 @@ lr_scheduler:
 result_root: ./results
 save_interval: 10
 save_part:
-  - model_func
+  - emb_func
   - weight_means
   - weight_logvars
   - bias_means
@@ -68,7 +68,7 @@ log_interval: 100
 device_ids: 0
 n_gpu: 1
 parallel_part:
-  - model_func
+  - emb_func
   - weight_means
   - weight_logvars
   - bias_means
