--- a/core/config/default.yaml
+++ b/core/config/default.yaml
@@ -31,7 +31,7 @@ optimizer:
   kwargs:
     lr: 0.001
   other:
-    model_func: 0.001 # define lr OR
+    emb_func: 0.001 # define lr OR
 #    another_part:    # define multi params
 #      lr: 0.1
 #      weight_decay: 0.5
