--- a/config/leo.yaml
+++ b/config/leo.yaml
@@ -37,11 +37,11 @@ backbone:
 classifier:
   name: LEO
   kwargs:
-    inner_optim:
-        inner_lr: 1e-2
+    inner_para:
+        lr: 1e-2
+        iter: 5
         finetune_lr: 1e-2
-    inner_train_iter: 5
-    finetune_iter: 5
+        finetune_iter: 5
     feat_dim: 640
     hid_dim: 64
     kl_weight: 1e-3
