--- a/config/baseline.yaml
+++ b/config/baseline.yaml
@@ -33,7 +33,7 @@ classifier:
     inner_train_iter: 100
     inner_batch_size: 4
     feat_dim: 64000
-    num_classes: 64
+    num_class: 64
 
 # optimizer info
 optimizer:
