--- a/config/leo.yaml
+++ b/config/leo.yaml
@@ -2,9 +2,9 @@ data_name: miniImageNet
 #data_name: tieredImageNet
 
 # base info
-way_num: 5
-shot_num: 5
-query_num: 15
+train_way: 5
+train_shot: 5
+train_query: 15
 batch_size: 128
 episode_size: 1
 
