--- a/core/properties/ProtoNet_Conv64F_miniimagenet_5W1S.yaml
+++ b/core/properties/ProtoNet_Conv64F_miniimagenet_5W1S.yaml
@@ -25,9 +25,9 @@ classifier:
 data_name: miniImageNet
 
 # base info
-way_num: 5
-shot_num: 1
-query_num: 15
+train_way: 5
+train_shot: 1
+train_query: 15
 
 # data info
 data_root: /data/wzy/miniImageNet--ravi
