--- a/config/rfs_model.yaml
+++ b/config/rfs_model.yaml
@@ -54,5 +54,5 @@ classifier:
     gamma: 0.5
     alpha: 0.5
     is_distill: True
-    model_func_path: ./results/RFSModel-Conv64F-5-5/checkpoints/model_func_best.pth
+    emb_func_path: ./results/RFSModel-Conv64F-5-5/checkpoints/emb_func_best.pth
     classifier_path: ./results/RFSModel-Conv64F-5-5/checkpoints/classifier_best.pth
