--- a/config/skd_model.yaml
+++ b/config/skd_model.yaml
@@ -76,5 +76,5 @@ classifier:
     gamma: 1.0
     alpha: 0.1
     is_distill: True
-    model_func_path: ./results/SKDModel-miniImageNet-resnet12-5-1-1615448697/checkpoints/model_func_best.pth
+    emb_func_path: ./results/SKDModel-miniImageNet-resnet12-5-1-1615448697/checkpoints/emb_func_best.pth
     cls_classifier_path: ./results/SKDModel-miniImageNet-resnet12-5-1-1615448697/checkpoints/cls_classifier_best.pth
