--- a/core/properties/ProtoNet_Conv64F_miniimagenet_5W1S.yaml
+++ b/core/properties/ProtoNet_Conv64F_miniimagenet_5W1S.yaml
@@ -47,7 +47,7 @@ optimizer:
   kwargs:
     lr: 0.001 # 0.05
   other:
-    model_func: 0.001
+    emb_func: 0.001
 
 # lr_scheduler info
 lr_scheduler:
