--- a/config/headers/model.yaml
+++ b/config/headers/model.yaml
@@ -7,9 +7,9 @@ parallel_part:
 pretrain_path: ~
 resume: False
 # few shot settings
-train_way: 5
-train_shot: 5
-train_query: 15
+way_num: 5
+shot_num: 5
+query_num: 15
 test_way: ~ # use ~ -> test_* = *_num
 test_shot: ~
 test_query: ~
