--- a/config/mtl_meta.yaml
+++ b/config/mtl_meta.yaml
@@ -1,9 +1,9 @@
 data_name: miniImageNet
 
 # base info
-train_way: 5
-train_shot: 1
-train_query: 15
+way_num: 5
+shot_num: 1
+query_num: 15
 batch_size: 1
 episode_size: 1
 
