--- a/config/versa.yaml
+++ b/config/versa.yaml
@@ -2,9 +2,9 @@ data_name: miniImageNet
 #data_name: tieredImageNet
 
 # base info
-train_way: 5
-train_shot: 1
-train_query: 15
+way_num: 5
+shot_num: 1
+query_num: 15
 batch_size: 128
 episode_size: 1
 
