--- a/core/properties/Baseline++_resnet18_miniimagenet_5W5S.yaml
+++ b/core/properties/Baseline++_resnet18_miniimagenet_5W5S.yaml
@@ -1,9 +1,9 @@
 data_name: miniImageNet
 
 # base info
-train_way: 5
-train_shot: 5
-train_query: 15
+way_num: 5
+shot_num: 5
+query_num: 15
 episode_size: 1
 
 # data info
