--- a/core/properties/ProtoNet_Conv64F_miniimagenet_5W5S.yaml
+++ b/core/properties/ProtoNet_Conv64F_miniimagenet_5W5S.yaml
@@ -25,9 +25,9 @@ classifier:
 data_name: miniImageNet
 
 # base info
-train_way: 5
-train_shot: 5
-train_query: 10
+way_num: 5
+shot_num: 5
+query_num: 10
 
 # data info
 data_root: /data/wzy/miniImageNet--ravi
