--- a/config/adm.yaml
+++ b/config/adm.yaml
@@ -1,15 +1,20 @@
 includes:
   - headers/data.yaml
   - headers/device.yaml
-  - headers/losses.yaml
   - headers/misc.yaml
   - headers/model.yaml
   - headers/optimizer.yaml
   - classifiers/ADM.yaml
+  - backbones/Conv64F.yaml
 
 way_num: 5
 shot_num: 1
 query_num: 15
+
+classifier:
+  name: ADM
+  kwargs:
+    n_k: 3
 
 backbone:
   name: Conv64F
@@ -20,25 +25,22 @@ backbone:
     negative_slope: 0.2
     last_pool: False
 
-
 # backbone:
 #   name: resnet12
-#   kwargs: 
+#   kwargs:
 #     maxpool_last2: False
 #     is_flatten: False
-
 
 # need to modify: core/model/backbone/resnet_18.py:114 stride=1
 # backbone:
 #   name: resnet18
-#   kwargs: 
+#   kwargs:
 #     is_flatten: False
 #     avg_pool: False
 
-
 # backbone:
 #   name: WRN
-#   kwargs: 
+#   kwargs:
 #     depth: 28
 #     widen_factor: 10
 #     avg_pool: False
