--- a/config/convm.yaml
+++ b/config/convm.yaml
@@ -4,18 +4,17 @@ includes:
   - headers/misc.yaml
   - headers/model.yaml
   - headers/optimizer.yaml
-  - classifiers/CAN.yaml
+  - classifiers/ConvMNet.yaml
   - backbones/Conv64F.yaml
 
-episode_size: 4
+way_num: 5
+shot_num: 1
+query_num: 15
 
 classifier:
-  name: CAN
+  name: ConvMNet
   kwargs:
-    scale_cls: 7 # default
-    num_class: 64
-    nFeat: 64
-    HW: 10
+    n_local: 441
 
 backbone:
   name: Conv64F
@@ -25,6 +24,7 @@ backbone:
     leaky_relu: True
     negative_slope: 0.2
     last_pool: False
+    maxpool_last2: False
 
 # backbone:
 #   name: resnet12
@@ -39,10 +39,10 @@ backbone:
 #     is_flatten: False
 #     avg_pool: False
 
-#backbone:
-#  name: WRN
-#  kwargs:
-#    depth: 28
-#    widen_factor: 10
-#    avg_pool: False
-#    is_flatten: False
+# backbone:
+#   name: WRN
+#   kwargs:
+#     depth: 28
+#     widen_factor: 10
+#     avg_pool: False
+#     is_flatten: False
