--- a/config/mtl_pretrain.yaml
+++ b/config/mtl_pretrain.yaml
@@ -6,9 +6,7 @@ include:
   - headers/model.yaml
   - headers/optimizer.yaml
   - backbones/Conv64F.yaml
-  - classifiers/MTL_meta.yaml
-
-pretrain_path: ./results/checkpoint.pth
+  - classifiers/MTL_pretrain.yaml
 
 way_num: 5
 shot_num: 1
@@ -21,20 +19,19 @@ test_episode: 10
 backbone:
   name: Conv64F
   kwargs:
-    is_flatten: False
+    is_flatten: True
     is_feature: False
     leaky_relu: False
     negative_slope: 0.2
     last_pool: True
 
 classifier:
-  name: MTL
+  name: MTLPretrain
   kwargs:
     feat_dim: 1600
     num_classes: 64
     inner_param:
       iter: 10
-    use_MTL: True
 
 
 # backbone:
@@ -43,13 +40,12 @@ classifier:
 #     keep_prob: 0.0
 
 # classifier:
-#   name: MTL
+#   name: MTLPretrain
 #   kwargs:
 #     feat_dim: 640
 #     num_classes: 64
 #     inner_param:
 #       iter: 10
-#     use_MTL: True
 
 
 # backbone:
@@ -57,13 +53,12 @@ classifier:
 #   kwargs: ~
 
 # classifier:
-#   name: MTL
+#   name: MTLPretrain
 #   kwargs:
 #     feat_dim: 512
 #     num_classes: 64
 #     inner_param:
 #       iter: 10
-#     use_MTL: True
 
 
 # backbone:
@@ -73,10 +68,9 @@ classifier:
 #     widen_factor: 10
 
 # classifier:
-#   name: MTL
+#   name: MTLPretrain
 #   kwargs:
 #     feat_dim: 640
 #     num_classes: 64
 #     inner_param:
 #       iter: 10
-#     use_MTL: True
