--- a/config/feat_pretrain.yaml
+++ b/config/feat_pretrain.yaml
@@ -12,7 +12,7 @@ includes:
 classifier:
   name: FEAT_Pretrain
   kwargs:
-    feat_dim: 640
+    feat_dim: 1600
     train_num_class: 64
     val_num_class: 16
     mode: euclidean
@@ -36,6 +36,10 @@ backbone:
 #     is_flatten: True
 
 # resnet12: feat_dim: 640
+
+# backbone:
+#   name: resnet18
+#   kwargs: ~
 
 # resnet18: feat_dim: 512
 
