--- a/config/skd.yaml
+++ b/config/skd.yaml
@@ -13,12 +13,27 @@ device_ids: 0
 way_num: 5
 shot_num: 1
 query_num: 15
-test_way: 10 # use ~ -> test_* = *_num
-test_shot: 5
-test_query: 5
 episode_size: 1
 train_episode: 100
 test_episode: 100
+
+batch_size: 128
+
+save_part:
+  - emb_func
+  - cls_classifier
+
+classifier:
+  name: SKDModel
+  kwargs:
+    feat_dim: 1600
+    num_class: 64
+    gamma: 1.0
+    alpha: 0.1
+    is_distill: False
+    emb_func_path: ./results/SKDModel-miniImageNet--ravi-Conv64F-5-1-Sep-23-2021-15-16-27/checkpoints/emb_func_best.pth
+    cls_classifier_path: ./results/SKDModel-miniImageNet--ravi-Conv64F-5-1-Sep-23-2021-15-16-27/checkpoints/cls_classifier_best.pth
+
 
 backbone:
   name: Conv64F
