--- a/config/mtl_pretrain.yaml
+++ b/config/mtl_pretrain.yaml
@@ -1,7 +1,6 @@
 include:
   - headers/data.yaml
-  - headers/devices.yaml
-  - headers/loss.yaml
+  - headers/device.yaml
   - headers/misc.yaml
   - headers/model.yaml
   - headers/optimizer.yaml
