--- a/config/classifiers/BOIL.yaml
+++ b/config/classifiers/BOIL.yaml
@@ -5,4 +5,4 @@ classifier:
       classifier_lr: 1e-2
       extractor_lr: 1e-2
     feat_dim: 1600
-    testing_method: NIL  # NIL for NIL_testing, No_
+    testing_method: NIL  # NIL for NIL-testing (after update once), Directly for directly test and Once_update for update once
